# video-material-review-method

./: .gitignore  CATALOG.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RULES.md  SKILL.md  pyproject.toml  requirements-transcription.txt  requirements.txt
docs/: ai-workflow.md  output-schema.md  tooling.md
examples/: project_config.example.json
scripts/: preflight.sh
templates/: video_material_review_method.md
tools/: __init__.py  vlog_material_review.py
