[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vlog-material-review"
version = "0.1.0"
description = "Reusable Vlog video material review workflow before rough cut editing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Yolanda" }
]
keywords = ["vlog", "video-editing", "material-review", "rough-cut", "ffmpeg"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
]
dependencies = []

[project.optional-dependencies]
transcription = ["faster-whisper>=1.0.0"]

[project.scripts]
vlog-material-review = "tools.vlog_material_review:main"

[tool.setuptools]
packages = ["tools"]
